POC working Redis sliding window rate limiting algo

--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,37 @@
 group 'moki.es'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
-apply plugin: 'pmd'
-apply plugin: 'checkstyle'
-
 task wrapper(type: Wrapper) {
     gradleVersion = '2.14-rc-5'
 }
 
-sourceCompatibility = 1.8
 
-repositories {
-    mavenCentral()
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'pmd'
+//    apply plugin: 'checkstyle'
+
+    repositories {
+        mavenCentral()
+    }
+
+    sourceCompatibility = 1.8
+
+    dependencies {
+
+        compile (
+                'org.slf4j:slf4j-api:1.7.21',
+                'net.jcip:jcip-annotations:1.0'
+        )
+
+        testCompile (
+                'org.assertj:assertj-core:3.4.1',
+                'junit:junit:4.12',
+                'ch.qos.logback:logback-classic:1.1.7'
+        )
+    }
+
 }
 
-dependencies {
 
-    compile (
-            'org.slf4j:slf4j-api:1.7.21'
-    )
-
-    testCompile 'org.assertj:assertj-core:3.4.1'
-    testCompile 'junit:junit:4.12'
-}
 
