--- a/redis/build.gradle
+++ b/redis/build.gradle
@@ -1,21 +1,9 @@
-group 'moki.es'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.14-rc-5'
-}
-
-sourceCompatibility = 1.8
-
-repositories {
-    jcenter()
-}
+description 'Redis Rate Limit'
 
 dependencies {
 
     compile(
+            project(':common'),
             'biz.paluch.redis:lettuce:4.2.0.Final',
             'com.eclipsesource.minimal-json:minimal-json:0.9.4',
             'org.slf4j:slf4j-api:1.7.21'
@@ -23,6 +11,6 @@ dependencies {
     testCompile(
             'org.assertj:assertj-core:3.4.1',
             'junit:junit:4.12',
-            'com.google.guava:guava:19.0'
+            'com.google.guava:guava:19.0',
     )
 }
