--- a/ratelimitj-core/build.gradle
+++ b/ratelimitj-core/build.gradle
@@ -3,7 +3,8 @@ description 'RateLimitJ Core'
 dependencies {
 
     compile(
-            'org.slf4j:slf4j-api:1.7.21'
+            'org.slf4j:slf4j-api:1.7.21',
+            'com.eclipsesource.minimal-json:minimal-json:0.9.4'
     )
     testCompile(
             'org.assertj:assertj-core:3.4.1',
