Java version update in Travis-CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: java
 jdk:
   - oraclejdk8
+
+# Use updated jdk version
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
