--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ subprojects {
                 'junit:junit:4.12',
                 'ch.qos.logback:logback-classic:1.1.7',
                 'com.google.guava:guava:19.0',
-                'org.mockito:mockito-core:2.0.55-beta'
+                'org.mockito:mockito-core:2.0.55-beta',
         )
     }
 
