--- a/ratelimitj-dropwizard/build.gradle
+++ b/ratelimitj-dropwizard/build.gradle
@@ -5,13 +5,12 @@ dependencies {
 
     compile(
             project(':ratelimitj-core'),
-            'io.dropwizard:dropwizard-core:1.0.0-rc3',
-            'io.dropwizard:dropwizard-jersey:1.0.0-rc3'
+            "io.dropwizard:dropwizard-core:0.9.2",
+            "io.dropwizard:dropwizard-jersey:0.9.2"
     )
     testCompile(
-            'org.assertj:assertj-core:3.4.1',
-            'junit:junit:4.12',
-            'com.google.guava:guava:19.0'
+            "io.dropwizard:dropwizard-testing:0.9.2",
+            project(':ratelimitj-redis'),
     )
 }
 
