--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ task wrapper(type: Wrapper) {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'pmd'
+    apply plugin: 'maven-publish'
+    apply plugin: 'maven'
+    apply plugin: 'signing'
+
 //    apply plugin: 'checkstyle'
 
     repositories {
@@ -31,6 +35,14 @@ subprojects {
                 'com.google.guava:guava:19.0',
                 'org.mockito:mockito-core:2.0.55-beta',
         )
+    }
+
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                from components.java
+            }
+        }
     }
 
 }
