--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ cache:
     - $HOME/.gradle/wrapper/
 services:
   - redis-server
-script: ./gradlew clean
+script: ./gradlew clean build
 notifications:
   email:
     on_success: change
