--- a/ratelimitj-redis/build.gradle
+++ b/ratelimitj-redis/build.gradle
@@ -4,6 +4,7 @@ dependencies {
 
     compile(
             project(':ratelimitj-api'),
+            project(':ratelimitj-core'),
             'biz.paluch.redis:lettuce:4.2.0.Final',
             'com.eclipsesource.minimal-json:minimal-json:0.9.4',
     )
