--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'RateLimitJ'
 
 include 'ratelimitj-api'
+include 'ratelimitj-core'
 include 'ratelimitj-redis'
 include 'ratelimitj-hazelcast'
 include 'ratelimitj-dropwizard'
