--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,4 @@
-rootProject.name = 'RateLimitJ'
-
+rootProject.name = 'ratelimitj'
 include 'ratelimitj-api'
 include 'ratelimitj-core'
 include 'ratelimitj-redis'
