All SlidingWindow implementations now run a common test suite

--- a/ratelimitj-hazelcast/build.gradle
+++ b/ratelimitj-hazelcast/build.gradle
@@ -8,6 +8,6 @@ dependencies {
             'com.hazelcast:hazelcast:3.7-EA'
     )
     testCompile(
-
+            project(':ratelimitj-internal:test'),
     )
 }
