--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,3 @@
-group 'es.moki'
-version '1.0-SNAPSHOT'
-
 buildscript {
     repositories {
         mavenCentral()
@@ -9,6 +6,15 @@ buildscript {
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.5.3"
     }
 }
+plugins {
+    id 'jacoco'
+    id 'com.github.kt3k.coveralls' version '2.6.3'
+}
+
+
+group 'es.moki'
+version '1.0-SNAPSHOT'
+
 apply plugin: 'io.codearte.nexus-staging'
 
 task wrapper(type: Wrapper) {
@@ -16,10 +22,13 @@ task wrapper(type: Wrapper) {
 }
 
 subprojects {
+
+
     apply plugin: 'java'
     apply plugin: 'pmd'
     apply plugin: 'findbugs'
     apply plugin: 'checkstyle'
+
     apply plugin: 'maven-publish'
     apply plugin: 'maven'
     apply plugin: 'signing'
@@ -120,9 +129,27 @@ subprojects {
                 }
             }
         }
-
     }
 
+//    jacocoTestReport {
+//        reports {
+//            xml.enabled = true // coveralls plugin depends on xml format report
+//            html.enabled = true
+//        }
+//    }
+//
+//    coveralls {
+//        sourceDirs = publishedProjects.sourceSets.main.allSource.srcDirs.flatten()
+//        jacocoReportPath = "${buildDir}/reports/jacoco/jacocoRootReport/jacocoRootReport.xml"
+//    }
+//
+//    tasks.coveralls {
+//        group = 'Coverage reports'
+//        description = 'Uploads the aggregated coverage report to Coveralls'
+//
+//        dependsOn jacocoRootReport
+//        onlyIf { System.env.'CI' }
+//    }
 
 
 }
