Redis implementation now supports Reactive JavaRx rate limiting

--- a/ratelimitj-redis/build.gradle
+++ b/ratelimitj-redis/build.gradle
@@ -7,6 +7,7 @@ dependencies {
             project(':ratelimitj-core'),
             'biz.paluch.redis:lettuce:4.2.0.Final',
             'com.eclipsesource.minimal-json:minimal-json:0.9.4',
+            'net.javacrumbs.future-converter:future-converter-rxjava-java8:0.3.0'
     )
     testCompile(
             project(':ratelimitj-internal:test'),
