--- a/ratelimitj-core/build.gradle
+++ b/ratelimitj-core/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     compile(
             'io.reactivex:rxjava:1.1.5',
             'org.slf4j:slf4j-api:1.7.21',
-            'net.jcip:jcip-annotations:1.0'
+            'com.google.code.findbugs:jsr305:3.0.1'
     )
 
 }
