--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,6 @@ buildscript {
 //    id 'com.github.kt3k.coveralls' version '2.6.3'
 //}
 
-group 'es.moki'
-version '0.1-SNAPSHOT'
-
 apply plugin: 'io.codearte.nexus-staging'
 
 task wrapper(type: Wrapper) {
@@ -26,7 +23,6 @@ subprojects {
     apply plugin: 'findbugs'
     apply plugin: 'checkstyle'
     apply plugin: 'jacoco'
-
     apply plugin: 'maven-publish'
     apply plugin: 'maven'
     apply plugin: 'signing'
@@ -58,85 +54,91 @@ subprojects {
                 'org.mockito:mockito-core:2.0.62-beta',
         )
     }
+}
 
-    if (project.hasProperty('release')) {
+//    if (project.hasProperty('release')) {
+nexusStaging {
+    username = ossrhUser
+    password = ossrhPassword
+}
 
-        nexusStaging {
-            username = ossrhUser
-            password = ossrhPassword
-        }
+subprojects {
 
-        subprojects {
+    task javadocJar(type: Jar) {
+        classifier = 'javadoc'
+        from javadoc
+    }
 
-            task javadocJar(type: Jar) {
-                classifier = 'javadoc'
-                from javadoc
-            }
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
 
-            task sourcesJar(type: Jar) {
-                classifier = 'sources'
-                from sourceSets.main.allSource
-            }
+    artifacts {
+        archives javadocJar, sourcesJar
+    }
+}
 
-            artifacts {
-                archives javadocJar, sourcesJar
-            }
-        }
+allprojects {
+    apply plugin: 'signing'
+    apply plugin: 'maven'
 
-        allprojects {
-            apply plugin: 'signing'
-            apply plugin: 'maven'
+    project.group = 'es.moki.ratelimitj'
+    project.version = '0.1'
 
-            // Signature of artifacts
-            signing {
-                sign configurations.archives
-            }
+    // Signature of artifacts
+    signing {
+        sign configurations.archives
+    }
 
-            // OSSRH publication
-            uploadArchives {
-                repositories {
-                    mavenDeployer {
-                        // POM signature
-                        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-                        // Target repository
-                        repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                            authentication(userName: ossrhUser, password: ossrhPassword)
+    // OSSRH publication
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                // POM signature
+                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+                // Target repository
+                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                    authentication(userName: ossrhUser, password: ossrhPassword)
+                }
+                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                    authentication(userName: ossrhUser, password: ossrhPassword)
+                }
+
+                pom.project {
+                    name 'es.moki.ratelimitj'
+                    description 'The RateLimitJ project aims to provide a modular rate limiting solution'
+                    packaging 'jar'
+                    url 'https://github.com/mokies/ratelimitj'
+
+                    scm {
+                        connection 'scm:git:https://github.com/mokies/ratelimitj.git'
+                        developerConnection 'scm:git:git@github.com:mokies/ratelimitj.git'
+                        url 'https://github.com/mokies/ratelimitj.git'
+                    }
+
+                    licenses {
+                        license {
+                            name 'Apache License Version 2.0'
+                            url 'http://www.apache.org/licenses/LICENSE-2.0'
+                            distribution 'repo'
                         }
-                        pom.project {
-                            name 'es.moki.ratelimitj'
-                            description 'The RateLimitJ project aims to provide a modular rate limiting solution'
-                            packaging 'jar'
-                            url 'https://github.com/mokies/ratelimitj'
+                    }
 
-                            scm {
-                                connection 'scm:git:https://github.com/mokies/ratelimitj.git'
-                                developerConnection 'scm:git:git@github.com:mokies/ratelimitj.git'
-                                url 'https://github.com/mokies/ratelimitj.git'
-                            }
-
-                            licenses {
-                                license {
-                                    name 'Apache License Version 2.0'
-                                    url 'http://www.apache.org/licenses/LICENSE-2.0'
-                                    distribution 'repo'
-                                }
-                            }
-
-                            developers {
-                                developer {
-                                    id = 'mokies'
-                                    name = 'Craig Baker'
-                                    email = 'craig@moki.es'
-                                }
-                            }
+                    developers {
+                        developer {
+                            id = 'mokies'
+                            name = 'Craig Baker'
+                            email = 'craig@moki.es'
                         }
                     }
                 }
             }
         }
     }
+//}
 
-
+// ./gradlew -Prelease uploadArchives closeAndPromoteRepository
 
 //    coveralls {
 //        sourceDirs = publishedProjects.sourceSets.main.allSource.srcDirs.flatten()
@@ -150,7 +152,6 @@ subprojects {
 //        dependsOn jacocoRootReport
 //        onlyIf { System.env.'CI' }
 //    }
-
 
 }
 
