--- a/ratelimitj-hazelcast/build.gradle
+++ b/ratelimitj-hazelcast/build.gradle
@@ -3,11 +3,15 @@ description 'RateLimitJ Hazelcast'
 dependencies {
 
     compile(
-            project(':ratelimitj-api'),
             project(':ratelimitj-core'),
             'com.hazelcast:hazelcast:3.6.3'
     )
     testCompile(
             project(':ratelimitj-internal:test'),
+            'org.assertj:assertj-core:3.4.1',
+            'junit:junit:4.12',
+            'ch.qos.logback:logback-classic:1.1.7',
+            'com.google.guava:guava:19.0',
+            'org.mockito:mockito-core:2.0.62-beta',
     )
 }
