--- a/build.gradle
+++ b/build.gradle
@@ -45,15 +45,6 @@ subprojects {
 
     sourceCompatibility = 1.8
 
-    dependencies {
-        testCompile(
-                'org.assertj:assertj-core:3.4.1',
-                'junit:junit:4.12',
-                'ch.qos.logback:logback-classic:1.1.7',
-                'com.google.guava:guava:19.0',
-                'org.mockito:mockito-core:2.0.62-beta',
-        )
-    }
 }
 
 //    if (project.hasProperty('release')) {
@@ -79,64 +70,66 @@ subprojects {
     }
 }
 
-allprojects {
-    apply plugin: 'signing'
-    apply plugin: 'maven'
 
-    project.group = 'es.moki.ratelimitj'
-    project.version = '0.1'
+if (project.hasProperty('release')) {
+    allprojects {
+        apply plugin: 'signing'
+        apply plugin: 'maven'
 
-    // Signature of artifacts
-    signing {
-        sign configurations.archives
-    }
+        project.group = 'es.moki.ratelimitj'
+        project.version = '0.1'
 
-    // OSSRH publication
-    uploadArchives {
-        repositories {
-            mavenDeployer {
-                // POM signature
-                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-                // Target repository
-                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                    authentication(userName: ossrhUser, password: ossrhPassword)
-                }
-                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                    authentication(userName: ossrhUser, password: ossrhPassword)
-                }
+        // Signature of artifacts
+        signing {
+            sign configurations.archives
+        }
 
-                pom.project {
-                    name 'es.moki.ratelimitj'
-                    description 'The RateLimitJ project aims to provide a modular rate limiting solution'
-                    packaging 'jar'
-                    url 'https://github.com/mokies/ratelimitj'
-
-                    scm {
-                        connection 'scm:git:https://github.com/mokies/ratelimitj.git'
-                        developerConnection 'scm:git:git@github.com:mokies/ratelimitj.git'
-                        url 'https://github.com/mokies/ratelimitj.git'
+        // OSSRH publication
+        uploadArchives {
+            repositories {
+                mavenDeployer {
+                    // POM signature
+                    beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+                    // Target repository
+                    repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                        authentication(userName: ossrhUser, password: ossrhPassword)
+                    }
+                    snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                        authentication(userName: ossrhUser, password: ossrhPassword)
                     }
 
-                    licenses {
-                        license {
-                            name 'Apache License Version 2.0'
-                            url 'http://www.apache.org/licenses/LICENSE-2.0'
-                            distribution 'repo'
+                    pom.project {
+                        name 'es.moki.ratelimitj'
+                        description 'The RateLimitJ project aims to provide a modular rate limiting solution'
+                        packaging 'jar'
+                        url 'https://github.com/mokies/ratelimitj'
+
+                        scm {
+                            connection 'scm:git:https://github.com/mokies/ratelimitj.git'
+                            developerConnection 'scm:git:git@github.com:mokies/ratelimitj.git'
+                            url 'https://github.com/mokies/ratelimitj.git'
                         }
-                    }
 
-                    developers {
-                        developer {
-                            id = 'mokies'
-                            name = 'Craig Baker'
-                            email = 'craig@moki.es'
+                        licenses {
+                            license {
+                                name 'Apache License Version 2.0'
+                                url 'http://www.apache.org/licenses/LICENSE-2.0'
+                                distribution 'repo'
+                            }
+                        }
+
+                        developers {
+                            developer {
+                                id = 'mokies'
+                                name = 'Craig Baker'
+                                email = 'craig@moki.es'
+                            }
                         }
                     }
                 }
             }
         }
     }
-//}
 
 // ./gradlew -Prelease uploadArchives closeAndPromoteRepository
 
