--- a/ratelimitj-core/build.gradle
+++ b/ratelimitj-core/build.gradle
@@ -9,5 +9,9 @@ dependencies {
             'org.slf4j:slf4j-api:1.7.21',
             'com.google.code.findbugs:jsr305:3.0.1'
     )
+    testCompile(
+                'org.assertj:assertj-core:3.4.1',
+                'junit:junit:4.12',
+    )
 
 }
