--- a/ratelimitj-inmemory/build.gradle
+++ b/ratelimitj-inmemory/build.gradle
@@ -3,8 +3,16 @@ description 'RateLimitJ Hazelcast'
 dependencies {
 
     compile(
-            project(':ratelimitj-api'),
             project(':ratelimitj-core'),
+    )
+
+    testCompile(
+            project(':ratelimitj-internal:test'),
+            'org.assertj:assertj-core:3.4.1',
+            'junit:junit:4.12',
+            'ch.qos.logback:logback-classic:1.1.7',
+            'com.google.guava:guava:19.0',
+            'org.mockito:mockito-core:2.0.62-beta',
     )
 
 }
