--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 apply plugin: 'io.codearte.nexus-staging'
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.14'
+    gradleVersion = '2.14.1'
 }
 
 subprojects {
@@ -77,7 +77,7 @@ if (project.hasProperty('release')) {
         apply plugin: 'maven'
 
         project.group = 'es.moki.ratelimitj'
-        project.version = '0.1'
+        project.version = '0.1.1'
 
         // Signature of artifacts
         signing {
@@ -92,7 +92,7 @@ if (project.hasProperty('release')) {
                     beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
                     // Target repository
                     repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                        authentication(userName: ossrhUser, password: ossrhPassword)
+//                        authentication(userName: ossrhUser, password: ossrhPassword)
                     }
                     snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
                         authentication(userName: ossrhUser, password: ossrhPassword)
@@ -129,8 +129,8 @@ if (project.hasProperty('release')) {
                 }
             }
         }
+        uploadArchives.dependsOn build
     }
-
 // ./gradlew -Prelease uploadArchives closeAndPromoteRepository
 
 //    coveralls {
@@ -147,6 +147,8 @@ if (project.hasProperty('release')) {
 //    }
 
 }
+
+
 
 
 
