--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,7 @@ if (project.hasProperty('release')) {
                     beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
                     // Target repository
                     repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-//                        authentication(userName: ossrhUser, password: ossrhPassword)
+                        authentication(userName: ossrhUser, password: ossrhPassword)
                     }
                     snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
                         authentication(userName: ossrhUser, password: ossrhPassword)
@@ -122,7 +122,6 @@ if (project.hasProperty('release')) {
                             developer {
                                 id = 'mokies'
                                 name = 'Craig Baker'
-                                email = 'craig@moki.es'
                             }
                         }
                     }
