--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 apply plugin: 'io.codearte.nexus-staging'
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.0-rc-2'
+    gradleVersion = '3.1'
 }
 
 subprojects {
