--- a/ratelimitj-dropwizard/build.gradle
+++ b/ratelimitj-dropwizard/build.gradle
@@ -17,7 +17,7 @@ dependencies {
             'junit:junit:4.12',
             'ch.qos.logback:logback-classic:1.1.7',
             'com.google.guava:guava:19.0',
-            'org.mockito:mockito-core:2.0.62-beta',
+            'org.mockito:mockito-core:2.1.0',
     )
 }
 
