--- a/ratelimitj-internal/test/build.gradle
+++ b/ratelimitj-internal/test/build.gradle
@@ -4,9 +4,9 @@ dependencies {
 
     compile(
             project(':ratelimitj-core'),
-            'org.assertj:assertj-core:3.4.1',
-            'junit:junit:4.12',
-            'com.google.guava:guava:19.0'
+            libraries.assertj,
+            libraries.junit,
+            libraries.guava,
     )
 
 }
