--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,15 @@ subprojects {
 
     sourceCompatibility = 1.8
 
+    ext.libraries = [
+            assertj : 'org.assertj:assertj-core:3.5.2',
+            junit  : 'junit:junit:4.12',
+            guava  : 'com.google.guava:guava:19.0',
+            mockito: 'org.mockito:mockito-core:2.2.9',
+            guava  : 'com.google.guava:guava:20.0',
+            logback: 'ch.qos.logback:logback-classic:1.1.7'
+    ]
+
 }
 
 //    if (project.hasProperty('release')) {
@@ -77,7 +86,7 @@ if (project.hasProperty('release')) {
         apply plugin: 'maven'
 
         project.group = 'es.moki.ratelimitj'
-        project.version = '0.1.1'
+        project.version = '0.2.0'
 
         // Signature of artifacts
         signing {
