--- a/ratelimitj-core/build.gradle
+++ b/ratelimitj-core/build.gradle
@@ -5,13 +5,13 @@ project.ext.release = true
 dependencies {
 
     compile(
-            'io.reactivex:rxjava:1.1.7',
+            'io.reactivex:rxjava:1.2.1',
             'org.slf4j:slf4j-api:1.7.21',
             'com.google.code.findbugs:jsr305:3.0.1'
     )
     testCompile(
-            'org.assertj:assertj-core:3.5.2',
-            'junit:junit:4.12',
+            libraries.assertj,
+            libraries.junit,
     )
 
 }
