--- a/ratelimitj-dropwizard/build.gradle
+++ b/ratelimitj-dropwizard/build.gradle
@@ -13,11 +13,11 @@ dependencies {
             project(':ratelimitj-redis'),
             project(':ratelimitj-internal:test'),
             'io.dropwizard:dropwizard-testing:1.0.0',
-            'org.assertj:assertj-core:3.5.2',
-            'junit:junit:4.12',
-            'ch.qos.logback:logback-classic:1.1.7',
-            'com.google.guava:guava:19.0',
-            'org.mockito:mockito-core:2.1.0',
+            libraries.assertj,
+            libraries.junit,
+            libraries.guava,
+            libraries.mockito,
+            libraries.logback,
     )
 }
 
