--- a/ratelimitj-redis/build.gradle
+++ b/ratelimitj-redis/build.gradle
@@ -6,9 +6,10 @@ dependencies {
 
     compile(
             project(':ratelimitj-core'),
-            'biz.paluch.redis:lettuce:4.3.0.Final',
+            //'biz.paluch.redis:lettuce:4.3.0.Final',
+            'biz.paluch.redis:lettuce:5.0.0.Beta1',
             'com.eclipsesource.minimal-json:minimal-json:0.9.4',
-            'net.javacrumbs.future-converter:future-converter-rxjava-java8:0.3.0'
+            libraries.guava
     )
 
     testCompile(
