--- a/ratelimitj-hazelcast/build.gradle
+++ b/ratelimitj-hazelcast/build.gradle
@@ -9,9 +9,12 @@ dependencies {
     testCompile(
             project(':ratelimitj-internal:test'),
             libraries.assertj,
-            libraries.junit,
             libraries.guava,
             libraries.mockito,
             libraries.logback,
     )
+
+    testCompile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
+    testCompile "org.junit.platform:junit-platform-runner:${junitPlatformVersion}"
+    testRuntime "org.junit.vintage:junit-vintage-engine:${junitVintageVersion}"
 }
