--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,27 @@ buildscript {
     }
     dependencies {
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.5.3"
+//        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M3'
     }
 }
 //plugins {
 //    id 'com.github.kt3k.coveralls' version '2.6.3'
 //}
 
+plugins {
+    id 'com.gradle.build-scan' version '1.3'
+}
+
 apply plugin: 'io.codearte.nexus-staging'
+//apply plugin: 'org.junit.platform.gradle.plugin'
 
 task wrapper(type: Wrapper) {
     gradleVersion = '3.2.1'
+}
+
+buildScan {
+    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
+    licenseAgree = 'yes'
 }
 
 subprojects {
@@ -39,6 +50,15 @@ subprojects {
         }
     }
 
+//    junitPlatform {
+//        filters {
+//            engines {
+//                include 'junit-jupiter'
+//            }
+//            includeClassNamePatterns '.*Test', '.*Tests'
+//        }
+//    }
+
     repositories {
         mavenCentral()
     }
@@ -48,11 +68,17 @@ subprojects {
     ext.libraries = [
             slf4j: 'org.slf4j:slf4j-api:1.7.21',
             assertj: 'org.assertj:assertj-core:3.6.1',
-            junit  : 'org.junit.jupiter:junit-jupiter-engine:5.0.0-M3',
+            junit  : 'org.junit.jupiter:junit-jupiter-api:5.0.0-M3',
             mockito: 'org.mockito:mockito-core:2.2.28',
             guava  : 'com.google.guava:guava:20.0',
             logback: 'ch.qos.logback:logback-classic:1.1.7'
     ]
+
+//    ext.junit4Version        = '4.12'
+    ext.junitVintageVersion  = '4.12.0-M3'
+    ext.junitPlatformVersion = '1.0.0-M3'
+    ext.junitJupiterVersion  = '5.0.0-M3'
+    ext.log4jVersion         = '2.6.2'
 
 }
 
