--- a/ratelimitj-dropwizard/src/test/resources/ratelimit-app.yml
+++ b/ratelimitj-dropwizard/src/test/resources/ratelimit-app.yml
@@ -11,9 +11,9 @@ logging:
   appenders:
     - type: console
 
-rateLimit:
-  host: redis
-  port: 6379
-  limits:
-    activate : { duration: 1 days, limit: 10000 }
-    login    : { duration: 1 days, limit: 10000 }
+#rateLimit:
+#  host: redis
+#  port: 6379
+#  limits:
+#    activate : { duration: 1 days, limit: 10000 }
+#    login    : { duration: 1 days, limit: 10000 }
