--- a/ratelimitj-redis/build.gradle
+++ b/ratelimitj-redis/build.gradle
@@ -14,9 +14,13 @@ dependencies {
     testCompile(
             project(':ratelimitj-internal:test'),
             libraries.assertj,
-            libraries.junit,
             libraries.guava,
             libraries.mockito,
             libraries.logback,
     )
+
+        testCompile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
+//    testCompile "org.junit.platform:junit-platform-runner:${junitPlatformVersion}"
+   	testRuntime "org.junit.vintage:junit-vintage-engine:${junitVintageVersion}"
+    //testRuntime "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
 }
