--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,8 @@ subprojects {
             junit  : 'org.junit.jupiter:junit-jupiter-api:5.0.0-M3',
             mockito: 'org.mockito:mockito-core:2.5.4',
             guava  : 'com.google.guava:guava:20.0',
-            logback: 'ch.qos.logback:logback-classic:1.1.7'
+            logback: 'ch.qos.logback:logback-classic:1.1.7',
+            findbugs: 'com.google.code.findbugs:jsr305:3.0.1'
     ]
 
     ext.junitVintageVersion = '4.12.0-M3'
