--- a/ratelimitj-internal/test/build.gradle
+++ b/ratelimitj-internal/test/build.gradle
@@ -2,10 +2,11 @@ description 'RateLimitJ Redis'
 
 dependencies {
 
-    compile(
+    implementation(
             project(':ratelimitj-core'),
             libraries.assertj,
             libraries.guava,
+            libraries.slf4j
     )
 
     compile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
