--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 
-redis:
-    image: redis:3.2-alpine
-    expose:
-    - "3306"
-    ports:
-    - "6379:6379"
+version: "3"
+services:
+
+  redis:
+      image: redis:3.2-alpine
+      ports:
+      - "6379:6379"
