--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,13 @@ plugins {
     id 'com.gradle.build-scan' version '1.3'
 }
 
-apply plugin: 'io.codearte.nexus-staging'
+
 //apply plugin: 'org.junit.platform.gradle.plugin'
 
 defaultTasks 'check'
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.4.1'
+    gradleVersion = '3.5'
 }
 
 buildScan {
@@ -29,13 +29,25 @@ buildScan {
     licenseAgree = 'yes'
 }
 
-subprojects {
+
+allprojects {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
 
     apply plugin: 'java-library'
+    apply plugin: 'jacoco'
+
+    sourceCompatibility = 1.8
+
+}
+
+subprojects {
+    
     apply plugin: 'pmd'
     apply plugin: 'findbugs'
     apply plugin: 'checkstyle'
-    apply plugin: 'jacoco'
     apply plugin: 'maven-publish'
     apply plugin: 'maven'
     apply plugin: 'signing'
@@ -43,14 +55,7 @@ subprojects {
     checkstyle {
         configFile = rootProject.file('gradle/config/checkstyle/checkstyle.xml')
         toolVersion = '6.19'
-    }
-
-    jacocoTestReport {
-        reports {
-            xml.enabled = true // coveralls plugin depends on xml format report
-            html.enabled = true
-        }
-    }
+    } 
 
 //    junitPlatform {
 //        filters {
@@ -61,12 +66,6 @@ subprojects {
 //        }
 //    }
 
-    repositories {
-        mavenCentral()
-    }
-
-    sourceCompatibility = 1.8
-    
     ext.junitVintageVersion = '4.12.0-M4'
     ext.junitPlatformVersion = '1.0.0-M4'
     ext.junitJupiterVersion = '5.0.0-M4'
@@ -169,20 +168,25 @@ allprojects {
         uploadArchives.dependsOn build
     }
 
-    //    coveralls {
-    //        sourceDirs = publishedProjects.sourceSets.main.allSource.srcDirs.flatten()
-    //        jacocoReportPath = "${buildDir}/reports/jacoco/jacocoRootReport/jacocoRootReport.xml"
-    //    }
-    //
-    //    tasks.coveralls {
-    //        group = 'Coverage reports'
-    //        description = 'Uploads the aggregated coverage report to Coveralls'
-    //
-    //        dependsOn jacocoRootReport
-    //        onlyIf { System.env.'CI' }
-    //    }
+}
 
+task codeCoverageReport(type: JacocoReport) {
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
 
+    subprojects.each {
+        sourceSets it.sourceSets.main
+    }
+
+    reports {
+        xml.enabled true
+        xml.destination "${buildDir}/reports/jacoco/report.xml"
+        html.enabled false
+        csv.enabled false
+    }
+}
+
+codeCoverageReport.dependsOn {
+    subprojects*.test
 }
 // http://nemerosa.ghost.io/2015/07/01/publishing-to-the-maven-central-using-gradle/
 // ./gradlew uploadArchives closeAndPromoteRepository
