--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 }
 
 plugins {
-    id 'com.gradle.build-scan' version '1.3'
+    id 'com.gradle.build-scan' version '1.6'
 }
 
 
@@ -24,6 +24,7 @@ task wrapper(type: Wrapper) {
 buildScan {
     licenseAgreementUrl = 'https://gradle.com/terms-of-service'
     licenseAgree = 'yes'
+    link 'GitHub', 'https://github.com/mokies/ratelimitj'
 }
 
 allprojects {
@@ -61,9 +62,9 @@ subprojects {
 //        }
 //    }
 
-    ext.junitVintageVersion = '4.12.0-M4'
-    ext.junitPlatformVersion = '1.0.0-M4'
-    ext.junitJupiterVersion = '5.0.0-M4'
+    ext.junitVintageVersion = '4.12.0-M3'
+    ext.junitPlatformVersion = '1.0.0-M3'
+    ext.junitJupiterVersion = '5.0.0-M3'
 
     ext.libraries = [
             slf4j  : 'org.slf4j:slf4j-api:1.7.21',
