--- a/ratelimitj-redis/build.gradle
+++ b/ratelimitj-redis/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     )
 
     api(
-            'biz.paluch.redis:lettuce:5.0.0.Beta1',
+            'biz.paluch.redis:lettuce:4.3.1.Final',
     )
 
     testCompile(
