--- a/ratelimitj-internal/test/build.gradle
+++ b/ratelimitj-internal/test/build.gradle
@@ -13,4 +13,14 @@ dependencies {
     compile "org.junit.platform:junit-platform-runner:${junitPlatformVersion}"
     runtime "org.junit.vintage:junit-vintage-engine:${junitVintageVersion}"
 
+    jacocoTestReport {
+//        additionalSourceDirs = files(sourceSets.main.allSource.srcDirs)
+//        sourceDirectories = files(sourceSets.main.allSource.srcDirs)
+        afterEvaluate {
+            classDirectories = files(classDirectories.files.collect {
+                fileTree(dir: it, exclude: 'es/mokie/ratelimitj/test')
+            })
+        }
+    }
+
 }
